<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_HMI" Id="{e1899da3-2bcf-4c7c-9527-f9d7395f5218}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	DateStart : STRING ;
	DateEnd : STRING ;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>